<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/background"
    android:background="@drawable/background">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70sp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10sp"
            android:paddingLeft="20sp"
            android:paddingRight="20sp"
            android:id="@+id/tipsmadelistlinearlayout">
        </LinearLayout>
    </ScrollView>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/moreoptions"
        android:layout_alignParentLeft="true"
        android:id="@+id/moreoptionsimagebutton"/>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/newtip"
        android:layout_alignParentRight="true"
        android:id="@+id/newtipimagebutton"/>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/newcategory"
        android:layout_toLeftOf="@id/newtipimagebutton"
        android:id="@+id/newcategoryimagebutton"/>
    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/categorydropdown"
        android:layout_marginTop="100sp"
        android:layout_marginBottom="250sp"
        android:padding="30sp"
        android:visibility="gone"
        android:clickable="true"
        android:focusable="true"
        android:id="@+id/categorylistview">
    </ListView>
    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="70sp"
        android:paddingLeft="20sp"
        android:id="@+id/tipslistview"
        android:visibility="gone">
    </ListView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:visibility="gone"
        android:id="@+id/newcategorylinearlayout">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="20"
            android:ems="10"
            android:hint="New Category"
            android:id="@+id/newcategoryedittext"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:text="@string/submit"
            android:id="@+id/catsubmitbutton"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:visibility="gone"
        android:layout_centerVertical="true"
        android:background="@color/colorPrimary"
        android:id="@+id/createtiplinearlayout">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="20"
            android:ems="10"
            android:hint="@string/title"
            android:inputType="text"
            android:id="@+id/titleedittext"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="20"
            android:ems="10"
            android:hint="@string/place"
            android:inputType="text"
            android:id="@+id/placeedittext"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="20"
            android:ems="10"
            android:hint="@string/bill"
            android:inputType="numberDecimal"
            android:id="@+id/billedittext"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="20"
            android:ems="10"
            android:hint="@string/tax"
            android:inputType="numberDecimal"
            android:id="@+id/taxedittext"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tiplinearlayout">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip"
                android:textSize="20sp"
                android:id="@+id/tipamounttextview"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/percentagesspinner">
            </Spinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/categorylinearlayout">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textSize="20sp"
                android:id="@+id/categorytextview"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/categoryspinner">
            </Spinner>
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:text="@string/submit"
            android:id="@+id/submitbutton"/>
    </LinearLayout>
</RelativeLayout>